--- a/css/index.css
+++ b/css/index.css
@@ -47,3 +47,37 @@ table {
 	border-spacing: 0;
 }
 /* CSS reset */
+body,
+main,
+.inputs{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+body{
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+}
+main{
+    width: 100%;
+    height: 100%;
+}
+.inputs{
+    flex-direction: column;
+    height: 35rem;
+    width: 30rem;
+    border: solid 3px blue;
+    border-radius: 5%;
+}
+#pixel-container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: baseline;
+    flex-wrap: nowrap;
+    width: calc(100vw - 35rem);
+    min-width: 35rem;
+    min-height: 35rem;
+    border: solid green 3px;
+}
