--- a/css/index.css
+++ b/css/index.css
@@ -60,6 +60,7 @@ body{
     height: 100%;
     min-height: 100vh;
     gap: 5rem;
+    background-color: rgb(139, 178, 213);
 }
 main{
     width: 100%;
@@ -68,10 +69,12 @@ main{
 }
 .inputs{
     flex-direction: column;
+    gap: 2rem;
     height: 35rem;
     width: 30rem;
-    border: solid 3px blue;
     border-radius: 5%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
 }
 #pixel-container{
     display: flex;
@@ -81,8 +84,9 @@ main{
     aspect-ratio: 1/1;
     min-width: 35rem;
     min-height: 35rem;
-    outline: solid 1px green;
     flex-shrink: 1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
 }
 #slider-n-value{
     display: flex;
@@ -95,7 +99,7 @@ main{
 }
 .slider {
     -webkit-appearance: none;
-    width: 25girem;
+    width: 25rem;
     height: 15px;
     border-radius: 5px;  
     background: #d3d3d3;
@@ -111,15 +115,14 @@ main{
     width: 25px;
     height: 25px;
     border-radius: 50%; 
-    background: #04AA6D;
+    background: #6d8cd4;
     cursor: pointer;
 }
-  
 .slider::-moz-range-thumb {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    background: #04AA6D;
+    background: #6d8cd4;
     cursor: pointer;
 }
 .pixel{
@@ -128,5 +131,34 @@ main{
     height: auto;
     min-height: 0;
     aspect-ratio: 1/1;
-    outline: solid 1px black;
+}
+#color_picker{
+    appearance: none;
+    width: 100px;
+    height: 100px;
+    border: none;
+    padding: none;
+    background-color: white;
+}
+#color_picker::-webkit-color-swatch{
+    border-radius: 50%;
+    border: none;
+}
+h1{
+    color: white;
+    font-size: 5rem;
+    font-family: 'Roboto', sans-serif;
+}
+h2{
+    font-size: 2rem;
+    font-family: 'Lato', sans-serif;
+}
+button{
+    font-size: 1rem;
+    color: white;
+    background-color: #6d8cd4;
+    width: 100px;
+    height: 35px;
+    border-radius: 5%;
+    border: none;
 }
